[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "mobility-mode-sequence-search"
version = "0.1.0"
description = "Native mode-sequence search kernel for mobility"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mobility Team" },
]
dependencies = [
  "polars>=1.39,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[tool.maturin]
python-source = "src"
module-name = "mobility_mode_sequence_search._native"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
